--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>venture-bridgebuilder</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>The Startup Wallah</title>
+    <link rel="icon" href="https://res.cloudinary.com/dsdcta1sr/image/upload/v1739729389/tsw_1_xmakwr.png">
+    <meta name="description" content="The Startup Wallah Project" />
+    <meta name="author" content="The Startup Wallah" />
     <meta property="og:image" content="/og-image.png" />
   </head>
 
